# simulations

./: Cargo.toml  README.md
mazes/: Cargo.toml
mazes/src/: main.rs
pendulum/: Cargo.toml
pendulum/src/: camera.rs  lib.rs  main.rs  pendulum.rs
spirographes/: Cargo.toml
spirographes/src/: main.rs
